Update test file.

--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="bin/zeus.css">
-
     <style>
-        .Column {
-            background: rgba(0, 0, 0, 0.1);
+        p {
+            margin: 0;
+            padding: 0;
+            display: block;
+            background-color: rgb(128, 180, 233);
+            border: 1px solid rgb(110, 162, 214);
         }
     </style>
 </head>
 <body>
     <div class="Container">
-        <div class="Row">
-            <div class="Column">
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas faucibus mollis interdum. Donec ullamcorper nulla non metus auctor fringilla. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+        <div class="Row Row--wrap">
+            <div class="Column Column--xs-12 Column--sm-4">
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec ullamcorper nulla non metus auctor fringilla. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas faucibus mollis interdum.</p>
             </div>
-            <div class="Column">
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+            <div class="Column Column--xs-12 Column--sm-4">
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec ullamcorper nulla non metus auctor fringilla. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas faucibus mollis interdum.</p>
             </div>
-            <div class="Column">
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+            <div class="Column Column--xs-12 Column--sm-4">
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec ullamcorper nulla non metus auctor fringilla. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas faucibus mollis interdum.</p>
             </div>
         </div>
     </div>
