Update hero button links.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Zeus &#8212; A BEM flexbox grid.</title>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/enzyme/zeus/develop/bin/zeus.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/enzyme/zeus/develop/bin/zeus.min.css?v=0.0.1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="bin/index.css">
 </head>
@@ -13,7 +13,7 @@
             <img src="images/icon.svg" alt="Zeus icon" class="Hero__icon">
             <h1 class="Hero__title">ZEUS</h1>
             <p class="Hero__slogan">A BEM flavoured, mobile first <strong>flexbox</strong> grid system.</p>
-            <p><a href="#" class="Hero__btn Hero__btn--cta"><i class="fa fa-download" aria-hidden="true"></i> Download (min)</a><a href="#" class="Hero__btn"><i class="fa fa-github-alt" aria-hidden="true"></i> Star on Github</a></p>
+            <p><a href="https://raw.githubusercontent.com/enzyme/zeus/develop/bin/zeus.min.css" class="Hero__btn Hero__btn--cta"><i class="fa fa-download" aria-hidden="true"></i> Download (min)</a><a href="https://github.com/enzyme/zeus" class="Hero__btn"><i class="fa fa-github-alt" aria-hidden="true"></i> Star on Github</a></p>
         </div>
         <div class="Hero__mouse mouse-icon"><div class="wheel"></div></div>
     </header>
