Update splash page copy.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Zeus &#8212; A BEM flexbox grid.</title>
+    <title>Zeus &#8212; A BEM flexbox grid framework.</title>
     <link rel="stylesheet" href="https://cdn.rawgit.com/enzyme/zeus/develop/bin/zeus.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/codepen-embed.min.css">
@@ -13,7 +13,7 @@
         <div class="Hero__box">
             <img src="images/icon.svg" alt="Zeus icon" class="Hero__icon">
             <h1 class="Hero__title">ZEUS</h1>
-            <p class="Hero__slogan">A BEM flavoured, mobile first <strong>flexbox</strong> grid system.</p>
+            <p class="Hero__slogan">A BEM flavoured, mobile first <strong>flexbox</strong> grid framework.</p>
             <p>
                 <a href="https://raw.githubusercontent.com/enzyme/zeus/develop/bin/zeus.min.css" class="Hero__btn Hero__btn--cta"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                 <a href="https://github.com/enzyme/zeus" class="Hero__btn"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
@@ -27,7 +27,7 @@
             <div class="Layout__row">
                 <div class="Layout__column">
                     <h1 class="Heading Heading--h1">The Grid</h1>
-                    <p class="Paragraph">Say hello to the standard grid. It's 12 columns, flexible and does what you'd expect from a grid system.</p>
+                    <p class="Paragraph">Say hello to the standard grid. It's 12 columns, flexible and does what you expect from a grid framework.</p>
                 </div>
             </div>
             <div class="Layout__row">
@@ -200,7 +200,7 @@
             <div class="Layout__row">
                 <div class="Layout__column">
                     <h1 class="Heading Heading--h1">Customizable</h1>
-                    <p class="Paragraph">Need a specificly sized container? Want more gutter space? Need more or less columns? <strong>We've got your covered!</strong></p>
+                    <p class="Paragraph">Need a specific container size? Want more gutter space? Need more or less columns? <strong>We've got you covered!</strong></p>
                     <p class="Paragraph">Simply by using the <code class="Code">SASS</code> version of Zeus, you can override the variables <code class="Code">$container-width</code> <code class="Code">$gutter-width</code> and <code class="Code">$column-count</code> respectively.</p>
                 </div>
             </div>
