--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
             <div class="Layout__row">
                 <div class="Layout__column Layout__column--text-center">
                     <p class="Paragraph">Created by <a href="https://github.com/enzyme" class="Link">Tristan Strathearn</a>.</p>
-                    <p class="Paragraph">Licensed under the <code class="Code">MIT</code> license &#8212; It's free to use for anyone!</p>
-                    <p class="Paragraph"><i class="fa fa-heart" aria-hidden="true"></i></p>
+                    <p class="Paragraph">Licensed under the <code class="Code">MIT</code> license &#8212; It's free, go ahead and try it out!</p>
+                    <p class="Paragraph"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></p>
                 </div>
             </div>
         </div>
