Update test file.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <div class="Layout">
+    <div class="Layout Layout--hero">
         <div class="Layout__row Layout__row--wrap">
             <div class="Layout__column Layout__column--xs-1">
                 <p>1</p>
@@ -61,64 +61,6 @@
             </div>
             <div class="Layout__column Layout__column--xs-1">
                 <p>1</p>
-            </div>
-        </div>
-        <div class="Layout__row Layout__row--wrap">
-            <div class="Layout__column Layout__column--xs-2">
-                <p>2</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-2">
-                <p>2</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-2">
-                <p>2</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-2">
-                <p>2</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-2">
-                <p>2</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-2">
-                <p>2</p>
-            </div>
-        </div>
-        <div class="Layout__row Layout__row--wrap">
-            <div class="Layout__column Layout__column--xs-3">
-                <p>3</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-3">
-                <p>3</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-3">
-                <p>3</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-3">
-                <p>3</p>
-            </div>
-        </div>
-        <div class="Layout__row Layout__row--wrap">
-            <div class="Layout__column Layout__column--xs-4">
-                <p>4</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-4">
-                <p>4</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-4">
-                <p>4</p>
-            </div>
-        </div>
-        <div class="Layout__row Layout__row--wrap">
-            <div class="Layout__column Layout__column--xs-6">
-                <p>6</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-6">
-                <p>6</p>
-            </div>
-        </div>
-        <div class="Layout__row Layout__row--wrap">
-            <div class="Layout__column Layout__column--xs-12">
-                <p>12</p>
             </div>
         </div>
     </div>
