Add installation instructions to splash page.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             <h1 class="Hero__title">ZEUS</h1>
             <p class="Hero__slogan">A BEM flavoured, mobile first <strong>flexbox</strong> grid framework.</p>
             <p>
-                <a href="https://raw.githubusercontent.com/enzyme/zeus/develop/bin/zeus.min.css" class="Hero__btn Hero__btn--cta"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
+                <a href="https://raw.githubusercontent.com/enzyme/zeus/master/bin/zeus.min.css" class="Hero__btn Hero__btn--cta"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                 <a href="https://github.com/enzyme/zeus" class="Hero__btn"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
                 <a href="https://github.com/enzyme/zeus" class="Hero__btn"><i class="fa fa-book" aria-hidden="true"></i> Docs</a>
             </p>
+            <p class="Hero__code">npm install zeus-grid / bower install zeus-grid</p>
         </div>
         <div class="Hero__mouse mouse-icon"><div class="wheel"></div></div>
     </header>
