Add meta information and alter download instruction boxes.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Zeus &#8212; A BEM flexbox grid framework.</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.rawgit.com/enzyme/zeus/develop/bin/zeus.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/codepen-embed.min.css">
@@ -19,7 +21,10 @@
                 <a href="https://github.com/enzyme/zeus" class="Hero__btn"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
                 <a href="https://github.com/enzyme/zeus" class="Hero__btn"><i class="fa fa-book" aria-hidden="true"></i> Docs</a>
             </p>
-            <p class="Hero__code">npm install zeus-grid / bower install zeus-grid</p>
+            <p>
+                <span class="Hero__code">npm install zeus-grid</span>
+                <span class="Hero__code">bower install zeus-grid</span>
+            </p>
         </div>
         <div class="Hero__mouse mouse-icon"><div class="wheel"></div></div>
     </header>
