Fix class names in example code.

--- a/index.html
+++ b/index.html
@@ -170,33 +170,33 @@
                 <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
                     <h2 class="Heading Heading--h2">Flex</h2>
                     <p class="Paragraph">Each column takes up an equal amount of space on the grid across all viewports, or a specific percentage using the size modifiers.</p>
-                    <p class="Paragraph"><code class="Code">.Column</code> or</p>
-                    <p class="Paragraph"><code class="Code">.Column--*</code></p>
+                    <p class="Paragraph"><code class="Code">.Layout__column</code> or</p>
+                    <p class="Paragraph"><code class="Code">.Layout__column--*</code></p>
                 </div>
                 <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
                     <h2 class="Heading Heading--h2">XS <code class="Heading__code">&lt;544px</code></h2>
                     <p class="Paragraph">For tiny devices like mobile phones. These columns are the starting point for any grid which are then overriden by larger viewport modifiers.</p>
-                    <p class="Paragraph"><code class="Code">.Column--xs-*</code></p>
+                    <p class="Paragraph"><code class="Code">.Layout__column--xs-*</code></p>
                 </div>
                 <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
                     <h2 class="Heading Heading--h2">SM <code class="Heading__code">&gt;=544px</code></h2>
                     <p class="Paragraph">For handheld devices like large phones or small tablets. These columns will be collapsed until the minimum viewport size has been reached.</p>
-                    <p class="Paragraph"><code class="Code">.Column--sm-*</code></p>
+                    <p class="Paragraph"><code class="Code">.Layout__column--sm-*</code></p>
                 </div>
                 <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
                     <h2 class="Heading Heading--h2">MD <code class="Heading__code">&gt;=768px</code></h2>
                     <p class="Paragraph">For larger handheld devices such as tablets. These columns will be collapsed until the minimum viewport size has been reached.</p>
-                    <p class="Paragraph"><code class="Code">.Column--md-*</code></p>
+                    <p class="Paragraph"><code class="Code">.Layout__column--md-*</code></p>
                 </div>
                 <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
                     <h2 class="Heading Heading--h2">LG <code class="Heading__code">&gt;=992px</code></h2>
                     <p class="Paragraph">For devices such as laptops or smaller screen desktops. These columns will be collapsed until the minimum viewport size has been reached.</p>
-                    <p class="Paragraph"><code class="Code">.Column--lg-*</code></p>
+                    <p class="Paragraph"><code class="Code">.Layout__column--lg-*</code></p>
                 </div>
                 <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
                     <h2 class="Heading Heading--h2">XL <code class="Heading__code">&gt;=1200px</code></h2>
                     <p class="Paragraph">For your large desktop and general purpose displays. These columns will be collapsed until the minimum viewport size has been reached.</p>
-                    <p class="Paragraph"><code class="Code">.Column--xl-*</code></p>
+                    <p class="Paragraph"><code class="Code">.Layout__column--xl-*</code></p>
                 </div>
             </div>
         </div>
@@ -230,7 +230,7 @@
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        
+
         ga('create', 'UA-77219606-1', 'auto');
         ga('send', 'pageview');
     </script>
