--- a/index.html
+++ b/index.html
@@ -167,33 +167,33 @@
                 </div>
             </div>
             <div class="Layout__row Layout__row--wrap">
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
+                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
                     <h2 class="Heading Heading--h2">Flex</h2>
                     <p class="Paragraph">Each column takes up an equal amount of space on the grid across all viewports, or a specific percentage using the size modifiers.</p>
                     <p class="Paragraph"><code class="Code">.Layout__column</code> or</p>
                     <p class="Paragraph"><code class="Code">.Layout__column--*</code></p>
                 </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
+                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
                     <h2 class="Heading Heading--h2">XS <code class="Heading__code">&lt;544px</code></h2>
                     <p class="Paragraph">For tiny devices like mobile phones. These columns are the starting point for any grid which are then overriden by larger viewport modifiers.</p>
                     <p class="Paragraph"><code class="Code">.Layout__column--xs-*</code></p>
                 </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
+                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
                     <h2 class="Heading Heading--h2">SM <code class="Heading__code">&gt;=544px</code></h2>
                     <p class="Paragraph">For handheld devices like large phones or small tablets. These columns will be collapsed until the minimum viewport size has been reached.</p>
                     <p class="Paragraph"><code class="Code">.Layout__column--sm-*</code></p>
                 </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
+                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
                     <h2 class="Heading Heading--h2">MD <code class="Heading__code">&gt;=768px</code></h2>
                     <p class="Paragraph">For larger handheld devices such as tablets. These columns will be collapsed until the minimum viewport size has been reached.</p>
                     <p class="Paragraph"><code class="Code">.Layout__column--md-*</code></p>
                 </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
+                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
                     <h2 class="Heading Heading--h2">LG <code class="Heading__code">&gt;=992px</code></h2>
                     <p class="Paragraph">For devices such as laptops or smaller screen desktops. These columns will be collapsed until the minimum viewport size has been reached.</p>
                     <p class="Paragraph"><code class="Code">.Layout__column--lg-*</code></p>
                 </div>
-                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4 Layout__column--lg-2">
+                <div class="Layout__column Layout__column--xs-12 Layout__column--sm-4">
                     <h2 class="Heading Heading--h2">XL <code class="Heading__code">&gt;=1200px</code></h2>
                     <p class="Paragraph">For your large desktop and general purpose displays. These columns will be collapsed until the minimum viewport size has been reached.</p>
                     <p class="Paragraph"><code class="Code">.Layout__column--xl-*</code></p>
