Update test file.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             display: block;
             background-color: rgb(128, 180, 233);
             border-radius: 5px;
-            min-height: 65px;
+            height: 100px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -24,43 +24,104 @@
     </style>
 </head>
 <body>
-    <div class="Layout Layout--hero">
-        <div class="Layout__row Layout__row--wrap">
+    <div class="Layout">
+        <div class="Layout__row Layout__row--wrap Layout__row--valign-stretch">
+            <div class="Layout__column Layout__column--xs-3">
+                <div class="Layout__row Layout__row--wrap">
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                </div>
+            </div>
+            <div class="Layout__column Layout__column--filler Layout__column--xs-6">
+                <p style="flex: 1;">1</p>
+            </div>
+            <div class="Layout__column Layout__column--xs-3">
+                <div class="Layout__row Layout__row--wrap">
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="Layout__row Layout__row--wrap Layout__row--valign-stretch">
+            <div class="Layout__column Layout__column--filler Layout__column--xs-3">
+                <p style="flex: 1;">1</p>
+            </div>
+            <div class="Layout__column Layout__column--xs-6">
+                <div class="Layout__row Layout__row--wrap">
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                </div>
+            </div>
+            <div class="Layout__column Layout__column--filler Layout__column--xs-3">
+                <p style="flex: 1;">1</p>
+            </div>
+        </div>
+        <div class="Layout__row Layout__row--wrap Layout__row--valign-stretch">
             <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
+                <div class="Layout__row Layout__row--wrap">
+                    <div class="Layout__column Layout__column--xs-12">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-12">
+                        <p>1</p>
+                    </div>
+                </div>
+            </div>
+            <div class="Layout__column Layout__column--xs-10">
+                <div class="Layout__row Layout__row--wrap">
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-6">
+                        <p>1</p>
+                    </div>
+                </div>
             </div>
             <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
-            </div>
-            <div class="Layout__column Layout__column--xs-1">
-                <p>1</p>
+                <div class="Layout__row Layout__row--wrap">
+                    <div class="Layout__column Layout__column--xs-12">
+                        <p>1</p>
+                    </div>
+                    <div class="Layout__column Layout__column--xs-12">
+                        <p>1</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
