--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <title>Document</title>
     <link rel="stylesheet" href="bin/zeus.min.css">
     <style>
+        body {
+            /*background-color: rgb(20, 20, 20);*/
+            padding-top: 5rem;
+        }
+
         p {
             margin: 0;
             padding: 0;
             display: block;
             background-color: rgb(128, 180, 233);
+            background-size: cover;
+            background-position: center center;
             border-radius: 5px;
-            height: 100px;
+            height: 150px;
             display: flex;
             justify-content: center;
             align-items: center;
             color: white;
+            transition: all .5s ease;
         }
 
         .Layout__column:nth-child(2n) > p {
@@ -29,97 +37,97 @@
             <div class="Layout__column Layout__column--xs-3">
                 <div class="Layout__row Layout__row--wrap">
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                 </div>
             </div>
-            <div class="Layout__column Layout__column--filler Layout__column--xs-6">
-                <p style="flex: 1;">1</p>
+            <div class="Layout__column Layout__column--fill-parent Layout__column--xs-6">
+                <p class="Layout__column--fill-child">6</p>
             </div>
             <div class="Layout__column Layout__column--xs-3">
                 <div class="Layout__row Layout__row--wrap">
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="Layout__row Layout__row--wrap Layout__row--valign-stretch">
-            <div class="Layout__column Layout__column--filler Layout__column--xs-3">
-                <p style="flex: 1;">1</p>
+            <div class="Layout__column Layout__column--fill-parent Layout__column--xs-3">
+                <p class="Layout__column--fill-child">3</p>
             </div>
             <div class="Layout__column Layout__column--xs-6">
                 <div class="Layout__row Layout__row--wrap">
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                 </div>
             </div>
-            <div class="Layout__column Layout__column--filler Layout__column--xs-3">
-                <p style="flex: 1;">1</p>
+            <div class="Layout__column Layout__column--fill-parent Layout__column--xs-3">
+                <p class="Layout__column--fill-child">3</p>
             </div>
         </div>
         <div class="Layout__row Layout__row--wrap Layout__row--valign-stretch">
             <div class="Layout__column Layout__column--xs-1">
                 <div class="Layout__row Layout__row--wrap">
                     <div class="Layout__column Layout__column--xs-12">
-                        <p>1</p>
+                        <p>12</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-12">
-                        <p>1</p>
+                        <p>12</p>
                     </div>
                 </div>
             </div>
             <div class="Layout__column Layout__column--xs-10">
                 <div class="Layout__row Layout__row--wrap">
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-6">
-                        <p>1</p>
+                        <p>6</p>
                     </div>
                 </div>
             </div>
             <div class="Layout__column Layout__column--xs-1">
                 <div class="Layout__row Layout__row--wrap">
                     <div class="Layout__column Layout__column--xs-12">
-                        <p>1</p>
+                        <p>12</p>
                     </div>
                     <div class="Layout__column Layout__column--xs-12">
-                        <p>1</p>
+                        <p>12</p>
                     </div>
                 </div>
             </div>
